--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,30 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Crimson Notes</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-list>
+    <!-- ion-item-sliding is causing an error. -- ERROR: Ignored attempt to cancel a touchmove event. -->
+    <ion-item-sliding class="sliding" *ngFor="let note of notes">
+      <ion-item color="light" (click)="viewNote(note)">
+        {{ note.title }}
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button icon-only color="dark" (click)="openModal(note)">
+          <ion-icon name="create"></ion-icon>
+        </button>
+        <button ion-button icon-only color="danger" (click)="deleteNote(note)">
+          <ion-icon name="trash"></ion-icon>
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-footer>
+    <ion-toolbar>
+      <button ion-button block class="rainbow" (click)="createNote()">Create Note</button>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
