validation & css tweaks

--- a/src/pages/create-note/create-note.html
+++ b/src/pages/create-note/create-note.html
@@ -12,7 +12,7 @@
 
     <ion-footer>
       <ion-toolbar>
-        <button ion-button block [disabled]="!f.valid" type="submit">Save Note</button>
+        <button ion-button block class="rainbow" [disabled]="!f.valid" type="submit">Save Note</button>
       </ion-toolbar>
     </ion-footer>
 
