--- a/src/pages/view-note/view-note.html
+++ b/src/pages/view-note/view-note.html
@@ -9,7 +9,7 @@
 
   <ion-footer>
     <ion-toolbar>
-      <button ion-button block (click)="openModal(note)">Edit Note</button>
+      <button ion-button block class="rainbow" (click)="openModal(note)">Edit Note</button>
     </ion-toolbar>
   </ion-footer>
 </ion-content>
