--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,11 @@
     <!-- ion-item-sliding is causing an error. -- ERROR: Ignored attempt to cancel a touchmove event. -->
     <ion-item-sliding class="sliding" *ngFor="let note of notes">
       <ion-item (click)="viewNote(note)">
-        {{ note.title }}
+        <h2>{{ note.title }}</h2>
+        <div class="tags">
+          <div class="tag" *ngFor="let tag of note.tags">{{ tag }}</div>
+        </div>
+
       </ion-item>
       <ion-item-options side="right">
         <button ion-button icon-only color="dark" (click)="openModal(note)">
