--- a/src/pages/edit-modal/edit-modal.html
+++ b/src/pages/edit-modal/edit-modal.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="secondary">
-    <ion-title>Edit Note: {{ note.title }}</ion-title>
+    <ion-title>Edit Note</ion-title>
     <ion-buttons end>
       <button ion-button (click)="closeModal()">Close</button>
     </ion-buttons>
