--- a/src/pages/edit-modal/edit-modal.html
+++ b/src/pages/edit-modal/edit-modal.html
@@ -15,7 +15,7 @@
 
     <ion-footer>
       <ion-toolbar>
-        <button ion-button block class="rainbow" [disabled]="!f.valid" type="submit">Update Note</button>
+        <button ion-button block class="rainbow" [disabled]="!f.valid" type="submit">Save Note</button>
       </ion-toolbar>
     </ion-footer>
 
