--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>Crimson Notes</ion-title>
+
+    <ion-buttons end>
+      <button ion-button icon-only (click)="logoutUser()">
+        <ion-icon name="exit"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
